@@ -4,6 +4,8 @@
 	* Special case shortcut properties to create a QKeySequence
 	* Added an '-x' option to the uics tool to generate a Main method
 	  for testing purposes
+	* Made QWidget.MiniumumSizeHint a method rather than a property
+	  and changed the uics code generation to match.
 
 2007-30-01  Arno Rehn  <arno@arnorehn.de>
 
